更改文章排序方式为 -updated

--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,10 @@ prismjs:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
+  order_by: -updated #-date
 
 # Category & Tag
-default_category: uncategorized
+default_category: others #uncategorized
 category_map:
 tag_map:
 
